[project]
name = "md2html"
version = "0.2.0"
description = "A powerful Markdown to HTML converter with Morandi style"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Marcos Cheng", email = "marcos.cheng@example.com" }
]
keywords = ["markdown", "html", "converter", "morandi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markdown>=3.5.2",
    "jinja2>=3.1.3",
]

[project.urls]
Homepage = "https://github.com/marcoscheng/md2html"
Repository = "https://github.com/marcoscheng/md2html"

[project.scripts]
md2html = "md2html:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["md2html", "md2html.templates"]
include-package-data = true

[tool.setuptools.package-data]
"md2html.templates" = ["*.html"]
